force-app/main/default/objects/Volunteer_Request__c/fields/Tasks__c.field-meta.xml
<CustomField>
    <fullName>Tasks__c</fullName>
    <label>Description of Duties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booth Assistants</fullName>
            </value>
            <value>
                <fullName>Event Facilitators</fullName>
            </value>
            <value>
                <fullName>Information &amp; Redemption Booth</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>Registration Booth</fullName>
            </value>
            <value>
                <fullName>Stage Crew</fullName>
            </value>
            <value>
                <fullName>Ushers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>