force-app/main/default/objects/Volunteer_Request__c/fields/Types_of_Meal_Availability__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Meal_Availability__c</fullName>
    <label>Types of Meal Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Western</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>