force-app/main/default/objects/Volunteer_Request__c/fields/Urgent_Request__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent Request</label>
    <type>Checkbox</type>
</CustomField>