force-app/main/default/objects/Volunteer_Request__c/fields/Urgent_Request_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Request_Reasons__c</fullName>
    <label>Urgent Request Reasons</label>
    <type>TextArea</type>
</CustomField>