force-app/main/default/objects/Volunteer_Request__c/fields/Venue_of_Activity_Event__c.field-meta.xml
<CustomField>
    <fullName>Venue_of_Activity_Event__c</fullName>
    <label>Venue of Activity/Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>