force-app/main/default/objects/Volunteer_Request__c/fields/Volunteer_Attire__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Attire__c</fullName>
    <label>Volunteer Attire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Smart Casual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>