force-app/main/default/objects/Volunteer_Request__c/fields/Volunteer_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Volunteer External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>