force-app/main/default/objects/Volunteer_Request__c/fields/Volunteer_Reporting_Venue__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Reporting_Venue__c</fullName>
    <description>Please Enter the Volunteer Reporting Venue for Volunteer Request</description>
    <inlineHelpText>Please Enter the Volunteer Reporting Venue for Volunteer Request</inlineHelpText>
    <label>Volunteer Reporting Venue</label>
    <length>254</length>
    <type>Text</type>
</CustomField>