force-app/main/default/objects/Volunteer_Request__c/fields/Volunteer_Request_No__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Request_No__c</fullName>
    <displayFormat>VR-{yy}{mm}{dd}-{00}</displayFormat>
    <label>VR No.</label>
    <type>AutoNumber</type>
</CustomField>