force-app/main/default/objects/Volunteer_Request__c/fields/Volunteering_Role__c.field-meta.xml
<CustomField>
    <fullName>Volunteering_Role__c</fullName>
    <label>Volunteering Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Coordinating</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>General Duties</fullName>
            </value>
            <value>
                <fullName>Technical Duties</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>