force-app/main/default/objects/Volunteer_Request__c/fields/VR_Number_of_Volunteers_Selected__c.field-meta.xml
<CustomField>
    <fullName>VR_Number_of_Volunteers_Selected__c</fullName>
    <label>VR Number of Volunteers Selected</label>
    <summaryFilterItems>
        <field>Assigned_Volunteer__c.Assignee_Status__c</field>
        <operation>equals</operation>
        <value>Selected</value>
    </summaryFilterItems>
    <summaryForeignKey>Assigned_Volunteer__c.Volunteer_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>