force-app/main/default/objects/Volunteer_Request__c/fields/VR_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>VR_Record_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VR Record Id</label>
    <type>Text</type>
</CustomField>