force-app/main/default/objects/Volunteer_Request__c/fields/VS_Referral_Number__c.field-meta.xml
<CustomField>
    <fullName>VS_Referral_Number__c</fullName>
    <displayFormat>VSR-{yy}{mm}{dd}-{000}</displayFormat>
    <label>VS Referral Number</label>
    <type>AutoNumber</type>
</CustomField>