force-app/main/default/objects/Volunteer_Request__c/recordTypes/Indirect.recordType-meta.xml
<RecordType>
    <fullName>Indirect</fullName>
    <active>true</active>
    <label>Indirect</label>
</RecordType>