force-app/main/default/objects/Volunteer_Request__c/validationRules/Start_date_less_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_less_than_today</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNEW(), Start_Date__c &lt;  TODAY() )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be greater than today.</errorMessage>
</ValidationRule>