force-app/main/default/objects/Volunteer_Request__c/validationRules/Urgent_Request_Reasons_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Urgent_Request_Reasons_is_required</fullName>
    <active>true</active>
    <description>Urgent Request Reasonsis required when the Urgent request checkbox is true</description>
    <errorConditionFormula>Urgent_Request__c = true &amp;&amp;  Urgent_Request_Reasons__c = null</errorConditionFormula>
    <errorMessage>Please Enter Urgent Request Reasons or else Uncheck the  Urgent Request Reasons checkbox.</errorMessage>
</ValidationRule>