force-app/main/default/objects/Volunteer_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Request_Date__c</columns>
    <columns>NAME</columns>
    <columns>Request_status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Engagement_Type_F__c</columns>
    <columns>Number_of_Volunteer_Accepted__c</columns>
    <columns>Number_of_Volunteers_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>