force-app/main/default/objects/Volunteer_Request__c/listViews/Patient_Escort.listView-meta.xml
<ListView>
    <fullName>Patient_Escort</fullName>
    <columns>Volunteer_External_Id__c</columns>
    <columns>Engagement_Type_F__c</columns>
    <columns>NAME</columns>
    <columns>Requestor_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Request_status__c</columns>
    <columns>Assignment_Status__c</columns>
    <columns>Number_of_Volunteers_Required__c</columns>
    <columns>Minimum_Volunteer_Required__c</columns>
    <columns>Number_of_Volunteer_Accepted__c</columns>
    <columns>Frequency_Type__c</columns>
    <columns>Venue_of_Activity_Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Patient Escort</value>
    </filters>
    <label>Patient Escort</label>
</ListView>